完善登录注册

--- a/YT/index.html
+++ b/YT/index.html
@@ -191,7 +191,7 @@
 			
 			document.getElementById("opw").addEventListener('tap',function(){
 				
-//				mui.openWindow('froumCont.html','froumCont',{})
+				mui.openWindow('voteDetail.html','voteDetail',{})
 			}); 
 			
 			
