--- a/YT/voteDetail.html
+++ b/YT/voteDetail.html
@@ -225,7 +225,7 @@
 	    </div>
 	</div>
 	
-	<div class="reward-modal modal-mask" style="display: none;">
+<!-- 	<div class="reward-modal modal-mask" style="display: none;">
 		<div class="modal-window">
 			<a href="javascript:;" class="close-modal"></a>
 			<img src="images/user.png" alt="" />
@@ -252,7 +252,7 @@
 			<a href="javascript:;" class="mui-btn mui-btn-block">举报</a>
 			<a href="javascript:;" class="mui-btn mui-btn-block">取消</a>
 		</div>
-	</div>
+	</div> -->
 		
 	<script type="text/javascript" src="js/zepto.min.js"></script>
 	<script type="text/javascript" src="js/touch.js"></script>
