--- a/YT/postDetail.html
+++ b/YT/postDetail.html
@@ -222,7 +222,7 @@
 	    </div>
 	</div>
 	
-	<div id="reward-modal" class="modal-mask">
+	<!-- <div id="reward-modal" class="modal-mask">
 		<div class="modal-window">
 			<a href="javascript:;" class="close-modal"></a>
 			<img src="images/user.png" alt="" />
@@ -249,7 +249,7 @@
 			<a href="javascript:;" class="mui-btn mui-btn-block">举报</a>
 			<a href="javascript:;" class="mui-btn mui-btn-block">取消</a>
 		</div>
-	</div> 
+	</div>  -->
 		
 		
 	<script type="text/javascript" src="js/zepto.min.js"></script>
