--- a/YT/tools/releaseContent.html
+++ b/YT/tools/releaseContent.html
@@ -20,7 +20,7 @@
 	</header>
 	<div class="mui-content" style="background-color: #fff;">
 		
-		<form class="mui-input-group login-from" id="contentForm">
+		<form class="mui-input-group" id="contentForm">
 			   	<div class="mui-input-row">
 			   		<input type="text" name="title" placeholder="标题(4~14个字)" />
 			   	</div>
@@ -29,14 +29,14 @@
 			   	</div>
 			     
 			     <div class="mui-row">
-			     	<span class="mui-pull-left ellipse location">北京</span>
+			     	<span class="mui-pull-left ellipse location"><span class="location-name">北京</span><a href="javascript:;" class="del-location"></a></span>
 			     	<a href="javascript:;" id="add-emojis" class="content-btn mui-pull-right"></a>
 			     	<a href="javascript:;" id="add-images" class="content-btn mui-pull-right"></a>
-			     	<span class="mui-pull-right ellipse status" id="status">公开
-			     		<ul>
-			     			<li>公开</li>
-			     			<li>私密</li>
-			     		</ul>
+			     	<span class="mui-pull-right ellipse status" id="status"><span>公开</span>
+				     	<ul>
+				     		<li>公开</li>
+				     		<li>私密</li>
+				     	</ul>
 			     	</span>
 			     </div>
 			     
@@ -48,20 +48,17 @@
 	<script type="text/javascript">
 		mui.plusReady(function() {
 			
-			$('.location').on('tap', function() {
-				  layer.open({
-				    type: 1
-				    ,content: '<div class="head"><input type="text" placeholder="搜索附近位置"><a class="cancel">取消</a></div><ul><li class="on">不显示地理位置</li><li>北京市</li><li>798艺术区</li></ul>'
-				    ,anim: 'up'
-				    ,style: 'position:fixed; bottom:0; left:0; width: 100%; height:80%; padding:10px 0; border:none;',
-				    className : 'location-box'
-				  });
-				  $('.cancel').on('tap', function() {
-				  	layer.closeAll()
-				  });
-				  $('.cancel').on('touchend', function(e) {
-				  	e.preventDefault();
-				  });
+			$('.location .del-location').on('tap',function() {
+				if (!$('.location').hasClass('hide')) {
+									$('.location').addClass('hide').find('.location-name').html('显示位置 ');
+				}
+			});
+			
+			$('.location .location-name').on('tap', function(e){
+				if (!$('.location').hasClass('hide')) {
+					$('.location').addClass('hide');
+				}
+				$(this).html('获取位置中...');
 			});
 			
 			$('.location').on('touchend', function(e){
@@ -69,11 +66,22 @@
 			});
 			
 			$('#status').on('tap', function(e) {
-				if($('.ellipse > ul').css('display') == 'none') {
-					$('.ellipse > ul').show();
+				if ($('#status > span').html().trim() == '公开') {
+					$('#status > ul').html('<li>公开</li><li>私密</li>');
 				} else {
-					$('.ellipse > ul').hide();
+					$('#status > ul').html('<li>私密</li><li>公开</li>');
 				}
+				$('#status > ul').show();
+				e.preventDefault();
+			});
+			
+			$('#status').on('tap', 'li', function(e) {
+				$('#status > ul').hide();
+				$('#status > span').html($(this).html());
+				e.stopPropagation();
+			});
+			
+			$('#status li').on('touchend',function(e){
 				e.preventDefault();
 			});
 			
