--- a/YT/tools/releastVote.html
+++ b/YT/tools/releastVote.html
@@ -35,9 +35,9 @@
 			     <a  class="mui-btn mui-btn-block add-vote"><i class="mui-icon mui-icon-plusempty"></i>新建投票选项</a>
 			     
 			     <div class="mui-row">
-			     	<span class="mui-pull-left ellipse location">北京</span>
+			     	<span class="mui-pull-left ellipse location"><span class="location-name">北京</span><a href="javascript:;" class="del-location"></a></span>
 			     	<span class="mui-pull-right ellipse status" id="status">
-			     		公开
+			     		<span>公开</span>
 			     		<ul>
 			     			<li>公开</li>
 			     			<li>私密</li>
@@ -53,20 +53,17 @@
 	<script type="text/javascript">
 		mui.plusReady(function() {
 			
-			$('.location').on('tap', function() {
-				  layer.open({
-				    type: 1
-				    ,content: '<div class="head"><input type="text" placeholder="搜索附近位置"><a class="cancel">取消</a></div><ul><li class="on">不显示地理位置</li><li>北京市</li><li>798艺术区</li></ul>'
-				    ,anim: 'up'
-				    ,style: 'position:fixed; bottom:0; left:0; width: 100%; height:80%; padding:10px 0; border:none;',
-				    className : 'location-box'
-				  });
-				  $('.cancel').on('tap', function() {
-				  	layer.closeAll()
-				  });
-				  $('.cancel').on('touchend', function(e) {
-				  	e.preventDefault();
-				  });
+			$('.location .del-location').on('tap',function() {
+				if (!$('.location').hasClass('hide')) {
+									$('.location').addClass('hide').find('.location-name').html('显示位置 ');
+				}
+			});
+			
+			$('.location .location-name').on('tap', function(e){
+				if (!$('.location').hasClass('hide')) {
+					$('.location').addClass('hide');
+				}
+				$(this).html('获取位置中...');
 			});
 			
 			$('.location').on('touchend', function(e){
@@ -74,17 +71,29 @@
 			});
 			
 			$('#status').on('tap', function(e) {
-				if($('.ellipse > ul').css('display') == 'none') {
-					$('.ellipse > ul').show();
+				if ($('#status > span').html().trim() == '公开') {
+					$('#status > ul').html('<li>公开</li><li>私密</li>');
 				} else {
-					$('.ellipse > ul').hide();
+					$('#status > ul').html('<li>私密</li><li>公开</li>');
 				}
+				$('#status > ul').show();
+				e.preventDefault();
+			});
+			
+			$('#status').on('tap', 'li', function(e) {
+				$('#status > ul').hide();
+				$('#status > span').html($(this).html());
+				e.stopPropagation();
+			});
+			
+			$('#status li').on('touchend',function(e){
 				e.preventDefault();
 			});
 			
 			$('#status').on('touchend',function(e){
 				e.preventDefault();
 			});
+			
 		});
 	</script>
 </body>
